<resources>
    <string name="app_name">Speedometer</string>
    <string name="distance">distance</string>
    <string name="speed" translatable="false">speed</string>
    <string name="kilometer_per_hour">Km/h</string>
    <string name="miles_per_hours">Mph</string>
    <string name="kilometer">Kilometers</string>
    <string name="miles">Miles</string>
    <string name="show_in_miles">Show in miles</string>
    <string name="show_in_kilometers">Show in kilometers</string>
    <string name="dialog_message">Your GPS seems to be disabled, do you want to enable it?</string>
    <string name="open_setting">Open Setting</string>
    <string name="cancel">Cancel</string>

    <string name="adUnitId" translatable="false">ca-app-pub-8348549593399594/4935641411</string>
    <string name="adUnitIdAmazon" translatable="false">ca-app-pub-8348549593399594/9579507129</string>
    <string name="appAdValue" translatable="false">ca-app-pub-8348549593399594~4546481377</string>
    <string name="title_activity_policy">Privacy Policy</string>
    <string name="privacy_optin">I agree to the Privacy Policy
</string>
    <string name="privacy_btn">Continue</string>
    <string name="check_reminder">You need to accept the Privacy Policy to continue</string>
    <string name="privacy_info">In order to use speedometer you need to accept our privacy policy. <a href="https://sites.google.com/view/speedometer-pp">Click here</a> to read it online.</string>

    <string name="app_summary">Enjoy the easiest way of tracking your speed!</string>
    <string name="separator" translatable="false">-------------</string>
    <string name="btn_ob1">Awesome, next!</string>
    <string name="app_benefit_1">Get to know your performance - all important metrics at a glance</string>
    <string name="app_benefit_2">Big and beautiful speedometer (even bigger in landscape mode)</string>
    <string name="app_benefit_3">Keep track of your ride history (with metrics like maximum speed, average speed &amp; much more)</string>
    <string name="ob_two">2 of 4</string>
    <string name="title_ob2">Ride history</string>
    <string name="ob2_subtitle">All important metrics of your latest rides at a glance</string>
    <string name="btn_ob2">Ok, continue!</string>
    <string name="ob3_subtitle">Use cellular data network to improve the accuracy of displayed data</string>
    <string name="btn_ob3">Get started</string>
    <string name="ob_three">3 of 4</string>
    <string name="ob_one">1 of 4</string>
    <string name="pro">Pro</string>
    <string name="pro_benefit_1">No advertisements</string>
    <string name="pro_benefit_2">Drive safe: Set multiple speed interval limits and get notified in time</string>
    <string name="pro_benefit_3">Cool night-time experience with HUD (Head-Up-Display)</string>
    <string name="pro_summary">Enjoy an ad-free experience and profit from many new premium features</string>
    <string name="start_trial">Start Free Trial</string>
    <string name="trial_desc_1">7-day free trial, then </string>
    <string name="trial_desc_2">/year</string>
    <string name="alternative_subscription"><u>Or choose monthly billing without free trial for only </u></string>
    <string name="alternative_subscription2"><u>/month</u></string>
    <string name="user_canceled">Last chance of getting free trial</string>
    <string name="banner_title">Profit from an ad-free experience and many new premium features</string>
    <string name="more_information">More information</string>
    <string name="read_more">Read more</string>
    <string name="try_again">Try again</string>
    <string name="welcome_to">Welcome to</string>
    <string name="special_hint">Tip: Cellular Network</string>
    <string name="title_ob4">Better experience with</string>
    <string name="settings">Settings</string>
    <string name="set_speed_limits_intervals">Set speed limits intervals</string>
    <string name="choose_color">Choose Color:</string>
    <string name="set_speed">Set Speed:</string>
    <string name="speed_limit_position">Speed Limit#</string>
    <string name="sound_disable">off</string>
    <string name="sound_enable">on</string>
    <string name="total_ride_time">Total ride time:</string>
    <string name="max_speed">Max speed:</string>
    <string name="avg_speed">Avg speed:</string>
    <string name="distance_history">Distance:</string>
    <string name="clear_history">Clear History</string>
    <string name="miles_short">m</string>
    <string name="km_short">km</string>
    <string name="minute">m</string>
    <string name="hour">h</string>
    <string name="day">d</string>
    <string name="hud">HUD</string>
    <string name="ok">Ok</string>
    <string name="lightness">Lightness:</string>
    <string name="alpha">Alpha:</string>
    <string name="show_speed_in">Show speed in:</string>
    <string name="sound">Sound:</string>
    <string name="error_message_speed_limit">Speed limit should be between 0 and</string>
    <string name="avg">AVG</string>
    <string name="history_activity">History activity</string>
    <string name="max">MAX</string>
    <string name="add">Add</string>
    <string name="ride_history">Ride history</string>
    <string name="light_theme">Light Theme</string>
</resources>
