<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="15dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:text="@string/choose_color"
        android:textSize="@dimen/main_text_size" />

    <com.flask.colorpicker.ColorPickerView
        android:id="@+id/colorPickerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:alphaSlider="true"
        app:alphaSliderView="@+id/v_alpha_slider"
        app:density="13"
        app:lightnessSlider="true"
        app:lightnessSliderView="@+id/v_lightness_slider"
        app:wheelType="CIRCLE" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5sp"
        android:text="@string/lightness"
        android:textSize="@dimen/main_text_size" />

    <com.flask.colorpicker.slider.LightnessSlider
        android:id="@+id/v_lightness_slider"
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5sp"
        android:text="@string/alpha"
        android:textSize="@dimen/main_text_size" />

    <com.flask.colorpicker.slider.AlphaSlider
        android:id="@+id/v_alpha_slider"
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <TextView
        android:id="@+id/closeDialogButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="15sp"
        android:text="@string/ok"
        android:textSize="@dimen/main_text_size" />
</LinearLayout>