<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20sp"
    android:orientation="horizontal"
    tools:ignore="UselessParent"
    android:baselineAligned="false">

    <LinearLayout
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <com.trackingdeluxe.speedometer.ui.custom.RideInfoCircleView
            android:id="@+id/maxSpeedView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:bottomText="@string/max"
            app:isAnimatedRings="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20sp"
            android:text="@string/total_ride_time"
            android:textAllCaps="true"
            android:textSize="@dimen/main_text_size_land" />

        <Chronometer
            android:id="@+id/rideTimeView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="@dimen/main_text_size_land" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <com.trackingdeluxe.speedometer.ui.custom.RideInfoCircleView
            android:id="@+id/avgSpeedView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:bottomText="@string/avg"
            app:isAnimatedRings="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20sp"
            android:text="@string/distance_history"
            android:textAllCaps="true"
            android:textSize="@dimen/main_text_size_land" />

        <TextView
            android:id="@+id/hudDistanceView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="@dimen/main_text_size_land" />
    </LinearLayout>
</LinearLayout>