<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
    android:background="@color/backgroundColor"
        android:layout_height="match_parent">

    <TextView
            android:id="@+id/ob_counter1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/ob_one"
        android:fontFamily="@font/agency"
        android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:gravity="center"

        android:fontFamily="@font/agency"
        android:text="@string/welcome_to"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ob_counter1" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:lineSpacingExtra="10dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/agency"
        android:text="@string/app_summary"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
        android:textSize="20sp"
            android:text="@string/separator"
            android:textColor="#fff"
        android:fontFamily="@font/agency"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <Button
            android:id="@+id/btn_ob_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:fontFamily="@font/agency"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textColor="@color/backgroundColor"
            android:background="@drawable/button_selector"
            android:text="@string/btn_ob1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
            android:id="@+id/bulletpoint1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="50dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9">


        <ImageView
                android:id="@+id/check1"
                android:layout_width="24dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:contentDescription="Icon"
                app:srcCompat="@drawable/ic_check_green" />

        <TextView
                android:id="@+id/bp1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lineHeight="24dp"
            android:fontFamily="@font/agency"
                android:lineSpacingExtra="10dp"
                android:paddingTop="2dp"
                android:text="@string/app_benefit_1"
                android:textColor="@color/white"
                android:textSize="16sp" />
    </LinearLayout>


    <LinearLayout
            android:id="@+id/bulletpoint2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="50dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bulletpoint1">


        <ImageView
                android:id="@+id/check2"
                android:layout_width="24dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:contentDescription="Icon"
                app:srcCompat="@drawable/ic_check_green" />

        <TextView
                android:id="@+id/bp2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lineHeight="24dp"
                android:lineSpacingExtra="10dp"
                android:paddingTop="2dp"
            android:fontFamily="@font/agency"
                android:text="@string/app_benefit_2"
                android:textColor="@color/white"
                android:textSize="16sp" />
    </LinearLayout>


    <LinearLayout
            android:id="@+id/bulletpoint3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="50dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bulletpoint2">


        <ImageView
                android:id="@+id/check3"
                android:layout_width="24dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:contentDescription="Icon"
                app:srcCompat="@drawable/ic_check_green" />

        <TextView
                android:id="@+id/bp3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lineHeight="24dp"
                android:lineSpacingExtra="10dp"
            android:fontFamily="@font/agency"
                android:paddingTop="2dp"
                android:text="@string/app_benefit_3"
                android:textColor="@color/white"
                android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:fontFamily="@font/agency"
        android:text="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />


</androidx.constraintlayout.widget.ConstraintLayout>