<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:fillViewport="true"
    android:overScrollMode="never"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:descendantFocusability="blocksDescendants"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40sp"
            android:text="@string/ride_history"
            android:textAllCaps="true"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30sp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.trackingdeluxe.speedometer.ui.custom.RideInfoCircleView
                    android:id="@+id/totalMaxSpeedView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:bottomText="@string/max"
                    app:isAnimatedRings="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10sp"
                    android:text="@string/total_ride_time"
                    android:textAllCaps="true"
                    android:textSize="25sp" />


                <TextView
                    android:id="@+id/totalRideTimeView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10sp"
                    android:textSize="25sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40sp"
                android:orientation="vertical">

                <com.trackingdeluxe.speedometer.ui.custom.RideInfoCircleView
                    android:id="@+id/totalAVGSpeedView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:bottomText="@string/avg"
                    app:isAnimatedRings="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10sp"
                    android:text="@string/distance_history"
                    android:textAllCaps="true"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/totalDistanceView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10sp"
                    android:textSize="25sp" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/clearHistoryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15sp"
            android:drawableEnd="@drawable/ic_delete"
            android:drawablePadding="10sp"
            android:padding="10sp"
            android:text="@string/clear_history"
            android:textSize="25sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/historyView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:nestedScrollingEnabled="false"
            android:overScrollMode="never" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>