<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:gauge="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mirrorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20sp">

        <TextView
            android:id="@+id/hudButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hud"
            android:textSize="@dimen/main_text_size"
            android:textStyle="bold"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:id="@+id/proButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pro"
            android:textSize="@dimen/main_text_size"
            android:textStyle="bold"
            tools:ignore="RelativeOverlap" />


        <TextClock
            android:id="@+id/textClock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:drawableStart="@drawable/ic_history"
            android:drawablePadding="20sp"
            android:format12Hour="HH:mm"
            android:format24Hour="HH:mm"
            android:textSize="@dimen/main_text_size"
            tools:ignore="NestedWeights,RelativeOverlap" />

        <ImageView
            android:id="@+id/settingButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_setting"
            tools:ignore="ContentDescription" />
    </RelativeLayout>

    <com.trackingdeluxe.speedometer.ui.custom.GaugeView
        android:id="@+id/gaugeView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        gauge:faceColor="@color/gaugeFaceColor"
        gauge:initialValue="0"
        gauge:lowerText="@string/speed"
        gauge:majorNickInterval="10"
        gauge:minValue="0"
        gauge:needleColor="@color/mainGreenColor"
        gauge:scaleColor="@color/mainGreenColor"
        gauge:valuePerNick="1" />

    <fragment
        android:id="@+id/fragment"
        android:name="com.trackingdeluxe.smartreview.ReviewFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1">


        <include android:id="@+id/ride_info" layout="@layout/content_ride_info_layout" />


        <include layout="@layout/banner_view" />
    </RelativeLayout>
</LinearLayout>